tests/cases/fail/list_literal_element_type.p4
def main() -> None:
    xs: list[int] = [1, 2.5]
